[project]
name = "mcp-romm"
version = "0.1.0"
description = "MCP server for RomM — browse and manage your retro game library with AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
romm-mcp = "server:mcp.run"
